@@ -49,13 +49,10 @@ __objc_class_name_GSMutableDictionary
 __objc_class_name_NSGDictionary
 __objc_class_name_NSGMutableDictionary
 __objc_class_name_GSFFCallInvocation
+__objc_class_name_GSFTPURLHandle
+__objc_class_name_GSTelnetHandle
+__objc_class_name_GSFileHandle
 __objc_class_name_GSHTTPURLHandle
-__objc_class_name_GSMimeBase64DecoderContext
-__objc_class_name_GSMimeChunkedDecoderContext
-__objc_class_name_GSMimeCodingContext
-__objc_class_name_GSMimeDocument
-__objc_class_name_GSMimeParser
-__objc_class_name_GSMimeQuotedDecoderContext
 __objc_class_name_GSMutableSet
 __objc_class_name_GSSet
 __objc_class_name_GSSetEnumerator
@@ -64,6 +61,7 @@ __objc_class_name_NSGSet
 __objc_class_name_GSCInlineString
 __objc_class_name_GSCString
 __objc_class_name_GSCSubString
+__objc_class_name_GSImmutableString
 __objc_class_name_GSMutableString
 __objc_class_name_GSPlaceholderString
 __objc_class_name_GSString
@@ -74,6 +72,7 @@ __objc_class_name_NSGCString
 __objc_class_name_NSGMutableCString
 __objc_class_name_NSGMutableString
 __objc_class_name_NSGString
+__objc_class_name_NSImmutableString
 __objc_class_name_NXConstantString
 __objc_class_name_GSTcpHandle
 __objc_class_name_GSTcpPort
@@ -84,13 +83,6 @@ __objc_class_name_GSPointerValue
 __objc_class_name_GSRangeValue
 __objc_class_name_GSRectValue
 __objc_class_name_GSSizeValue
-__objc_class_name_GSSAXHandler
-__objc_class_name_GSXMLAttribute
-__objc_class_name_GSXMLDocument
-__objc_class_name_GSXMLDummy
-__objc_class_name_GSXMLNamespace
-__objc_class_name_GSXMLNode
-__objc_class_name_GSXMLParser
 __objc_class_name_NSArchiver
 __objc_class_name_NSArray
 __objc_class_name_NSArrayEnumerator
@@ -167,6 +159,7 @@ __objc_class_name_NSULongNumber
 __objc_class_name_NSLongLongNumber
 __objc_class_name_NSNumberFormatter
 __objc_class_name_NSObject
+__objc_class_name_NSZombie
 __objc_class_name__FastMallocBuffer
 __objc_class_name_NSPipe
 __objc_class_name_NSPort
@@ -179,6 +172,7 @@ __objc_class_name_NSProcessInfo
 __objc_class_name__NSConcreteProcessInfo
 __objc_class_name_NSProtocolChecker
 __objc_class_name_NSProxy
+__objc_class_name_GSRunLoopCtxt
 __objc_class_name_GSRunLoopPerformer
 __objc_class_name_GSRunLoopWatcher
 __objc_class_name_GSTimedPerformer
@@ -216,4 +210,31 @@ __objc_class_name_PrivateUndoGroup
 __objc_class_name_NSUserDefaults
 __objc_class_name_GSPlaceholderValue
 __objc_class_name_NSValue
-__objc_class_name_WindowsFileHandle
+__objc_class_name_GSMimeBase64DecoderContext
+__objc_class_name_GSMimeChunkedDecoderContext
+__objc_class_name_GSMimeCodingContext
+__objc_class_name_GSMimeDocument
+__objc_class_name_GSMimeHeader
+__objc_class_name_GSMimeParser
+__objc_class_name_GSMimeQuotedDecoderContext
+__objc_class_name_GSSAXHandler
+__objc_class_name_GSXMLAttribute
+__objc_class_name_GSXMLDocument
+__objc_class_name_GSXMLDummy
+__objc_class_name_GSXMLNamespace
+__objc_class_name_GSXMLNode
+__objc_class_name_GSXMLParser
+__objc_class_name_GSMimeBase64DecoderContext
+__objc_class_name_GSMimeChunkedDecoderContext
+__objc_class_name_GSMimeCodingContext
+__objc_class_name_GSMimeDocument
+__objc_class_name_GSMimeHeader
+__objc_class_name_GSMimeParser
+__objc_class_name_GSMimeQuotedDecoderContext
+__objc_class_name_GSSAXHandler
+__objc_class_name_GSXMLAttribute
+__objc_class_name_GSXMLDocument
+__objc_class_name_GSXMLDummy
+__objc_class_name_GSXMLNamespace
+__objc_class_name_GSXMLNode
+__objc_class_name_GSXMLParser
