@@ -1,3 +1,11 @@
+2002-06-30  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Headers/gnustep/base/GSFileHandle.h: New version of UnixFileHandle
+	for combined unix/windoze use.
+	* Source/GSFileHandle.m: New combined unix/windows implementation.
+	* Source/NSFileHandle.m: Use GSFileHandle under windoze.
+	* Source/GNUMakefile: Build GSFileHandle under windoze.
+
 2002-06-29  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSObject.m: ([-respondsToSelector:]) handle nul selectors.
